--- a/src/index.css
+++ b/src/index.css
@@ -392,6 +392,191 @@ div.avatar-container img:active {
   text-align: center;
 }
 
+.exchange-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5px 10px;
+  gap: 15px;
+  background-color: #000;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+}
+
+.title-h1 {
+  font-size: 25px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.title-p {
+  font-weight: 300;
+  font-size: 10px;
+  margin: 0;
+}
+
+.budget {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.budget > div {
+  display: flex;
+  justify-content: space-between;
+  width: 308px;
+  height: 44px;
+  align-items: center;
+  background: linear-gradient(#000 0%, #000 88%, #000 54%);
+  box-shadow: 0px 0px 11px rgba(255, 255, 255, 0.34);
+  padding: 5px 10px;
+  border-radius: 100px;
+}
+
+.budget-h1 {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.budget p {
+  margin: 0;
+  font-size: 10px;
+  font-weight: 300;
+  color: rgba(255,255,255,0.5);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 30px;
+}
+
+form > p {
+  font-size: 10px;
+  font-weight: 300;
+  margin-left: 5px;
+  align-self: flex-start;
+}
+
+form > div {
+  display: flex;
+  width: 100%;
+  gap: 10px;
+}
+
+.input-wrapper {
+  position: relative;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+}
+
+.styled-input {
+  text-align: center;
+  width: 100%;
+  padding: 8px 10px;
+  background: #000;
+  border: none;
+  color: #fff;
+  outline: none;
+}
+
+.input-line {
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(to right,
+    rgba(255, 255, 255, 0) 0%, 
+    rgba(255, 255, 255, 0.8) 20%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(255, 255, 255, 0.8) 80%,
+    rgba(255, 255, 255, 0) 100% 
+  );
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  border-radius: 1px;
+}
+
+.button-row {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.button-row > button {
+  width: 67px;
+  height: 19px;
+  border-radius: 100px;
+  background-color: #282828;
+  box-shadow: inset 0 0 3px rgba(0,0,0,0.61);
+  border: none;
+  color: white;
+  font-size: 8px;
+  font-weight: 500;
+  text-align: center;
+  cursor: pointer;
+}
+
+.submit-btn {
+  width: 114.95px;
+  height: 28px;
+  border: none;
+  border-radius: 100px;
+  background-color: #60FF82;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.instruction-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-left: 15px;
+}
+
+.instruction-title {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.instruction-title > h2 {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.instruction-list {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin: 0;
+}
+
+.instruction-list > li {
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.instruction-title > button {
+  color: white;
+  background-color: #282828;
+  width: 19px;
+  height: 19px;
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.61);
+  border: none;
+  border-radius: 50%;
+  font-size: 8px;
+  font-weight: 500;
+}
 
 @media (max-width: 768px) {
   div.avatar-container {
