--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   color: white;
   padding-top: 73px;
   background: radial-gradient(circle, rgba(255,255,255,0.6) 0%, black 35%, #0C0B0B 100%);
-
+  height: 100vh;
 }
 
 header {
@@ -131,6 +131,10 @@ div.theme-container > p {
   color: rgba(255,255,255,0.28);
   font-size: 10px;
   font-weight: 400;
+}
+
+div.home-main {
+  height: 100%;
 }
 
 div.progress-bar-container {
@@ -255,6 +259,8 @@ div.exchange img {
 div.avatar-container {
   height: 515px;
   width: 294.11px;
+  align-self: flex-end;
+  z-index: 1;
 }
 
 div.avatar-container img {
@@ -298,13 +304,15 @@ div.avatar-container img:active {
   bottom: 0;
   left: 0;
   right: 0;
+  height: 200px;
   background: linear-gradient(
-    to right, 
-    rgba(8, 8, 8, 0.8) 0%,   /* 90% opaque */
-    rgba(18, 18, 18, 0.8) 50% 
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.4) 30%,
+    rgba(0, 0, 0, 0.8) 70%, 
+    rgba(0, 0, 0, 0.95) 100% 
   );
-  box-shadow: 0 -50px 100px rgba(0,0,0, 0.8);
-  padding: 10px 0 20px;
+  padding: 60px 0 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -575,6 +583,69 @@ form > div {
   border-radius: 50%;
   font-size: 8px;
   font-weight: 500;
+}
+
+.modal-container {
+  position: fixed;
+  bottom: 0;
+  left: 10px;
+  right: 10px;
+  z-index: 10000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #1a1717;
+  border-radius: 50px 50px 0 0;
+  height: 130px;
+  padding-left: 40px;
+  padding-right: 30px;
+  gap: 20px;
+}
+
+.modal-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.modal-title-h1 {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.modal-title-button {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: rgba(70, 70, 70, 0.23);
+  border: none;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  align-self: flex-end;
+}
+
+.modal-container p {
+  font-size: 10px;
+  font-weight: 400;
+  margin: 0;
+  align-self: flex-start;
+}
+
+/* ModalOverlay.css */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9998;
 }
 
 @media (max-width: 768px) {
