--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,9 @@ body {
   width: 100vw;
   background-color: #0C0B0B;
   color: white;
-  padding-top: 73px;
   background: radial-gradient(circle, rgba(255,255,255,0.6) 0%, black 35%, #0C0B0B 100%);
   height: 100vh;
+  background-repeat: no-repeat;
 }
 
 header {
@@ -399,6 +399,15 @@ div.avatar-container img:active {
   text-align: center;
 }
 
+.exchange-mode {
+  background-color: black;
+}
+
+.exchange-content {
+  min-height: 100vh;
+  color: white;
+}
+
 .exchange-main {
   display: flex;
   flex-direction: column;
@@ -406,6 +415,9 @@ div.avatar-container img:active {
   padding: 5px 10px;
   gap: 15px;
   background-color: #000;
+  margin-bottom: 73px;
+  width: 100%;
+  min-height: 100vh;
 }
 
 .title {
