--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ body {
   background-color: #0C0B0B;
   color: white;
   background: radial-gradient(circle, rgba(255,255,255,0.6) 0%, black 35%, #0C0B0B 100%);
-  height: 100vh;
   background-repeat: no-repeat;
+  padding-top: 50px;
 }
 
 body.other-page {
@@ -34,7 +34,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: transparent;
   background: linear-gradient(to right, #0C0B0B00 0%, #1F1F1F 50%, #0C0B0B00 100%);
 }
 
@@ -684,7 +683,7 @@ form > div {
   flex-direction: column;
   justify-content: center;
   background-color: #000;
-  margin-top: -60px;
+  margin-top: -20px;
   width: 100%;
   max-height: 100vh;
   gap: 10px;
@@ -697,7 +696,7 @@ form > div {
   flex-direction: column;
   justify-content: center;
   background-color: #000;
-  margin-top: -60px;
+  margin-top: -50px;
   width: 100%;
   max-height: 100vh;
   gap: 10px;
@@ -706,7 +705,7 @@ form > div {
 }
 
 .active-tab {
-  width: 195px;
+  width: 180px;
   height: 29px;
   border-radius: 0 0 20px 20px;
   border: none;
@@ -718,7 +717,7 @@ form > div {
 }
 
 .non-active-tab {
-  width: 195px;
+  width: 180px;
   height: 29px;
   color: white;
   background-color: #000;
@@ -802,6 +801,342 @@ form > div {
   padding-left: 10px;
 }
 
+.stats-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  min-height: 100vh;
+  padding: 2rem;
+}
+
+.stats-main h1 {
+  font-size: 28px;
+  font-weight: 700;
+  align-self: self-start;
+  margin-left: 34px;
+  margin-bottom: 16px;
+}
+
+.stats-main h2 {
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 7px;
+  margin-bottom: 12px;
+  margin-left: 34px;
+}
+
+.dash-board {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  margin-top: 60px;
+  margin-bottom: 5px;
+}
+
+.profile-card {
+  background: transparent;
+  width: 100px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.3s;
+}
+
+.profile-card.top-card {
+  transform: translateY(-20px);
+  order: 2;
+}
+
+.profile-card.second-card {
+  order: 1;
+}
+
+.profile-card:not(.top-card):not(.second-card) {
+  order: 3;
+}
+
+.pfp-container {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 3px solid #ff0000;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.pfp-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.pfp-container.top-player-img {
+  border-color: #C3FF00;
+}
+
+.pfp-container.second-player-img {
+  border-color: #FF8000;
+}
+
+
+.profile-card {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100px;
+}
+
+.profile-card h2{
+  font-size: 11px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 18px;
+}
+
+.profile-card p{
+  font-size: 6px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  text-align: start;
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+.profile-card p span{
+  font-weight: 600;
+  color: white;
+}
+
+.p-row-leaders {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 70px;
+  align-items: center;
+  margin-left: 30px;
+  margin-top: 10px;
+  padding: 0.5rem, 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 11;
+}
+
+.p-row-leaders p{
+  margin: 0;
+  font-size: 8px;
+  font-weight: 600;
+  color: rgba(255,255,255,0.47);
+}
+
+.your-placement {
+  border: none;
+  border-top: 1px solid #fff;
+  margin-left: 40px;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: sticky;
+  top: 2.5rem;
+  z-index: 10;
+}
+
+.your-placement div {
+  background: #fff;
+  width: 201px;
+  height: 29px;
+  border-radius: 0 0 150px 150px;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.leaders-list-scroll {
+  max-height: 100%;
+  overflow-y: auto;
+  padding: 0.5rem 1rem;
+  -webkit-overflow-scrolling: touch; /* плавный scroll на iOS */
+  scroll-behavior: smooth;
+}
+
+.player-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 50px;
+  width: 100%;
+  margin-top: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  width: 350px;
+  margin-right: -30px;
+}
+
+.leaders {
+  position: relative;
+  overflow: hidden;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+
+.leaders-header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.leaders-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.leaders-photo-container {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.leaders-photo-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: contain;
+}
+
+.player-info   {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  margin-left: -100px;
+}
+
+.player-info p {
+  margin: 0;
+  font-size: 8px;
+  text-align: center;
+}
+
+.placement {
+  font-size: 10px;
+  margin-left: -40px;
+}
+
+.balance {
+  font-size: 13px;
+  font-weight: 600;
+  margin-left: -40px;
+}
+
+.exchanges {
+  font-size: 10px;
+  font-weight: 400;
+  margin-right: -40px;
+}
+
+.leaders-container {
+  height: 400px;
+  border-radius: 12px;
+  overflow: hidden;
+  position: relative;
+}
+
+.leaders-title {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 1rem 1rem 0.5rem;
+  color: white;
+}
+
+.p-row-leaders {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.75rem 1rem 0.5rem;
+  font-weight: 500;
+  font-size: 0.75rem;
+  color: rgba(255, 255, 255, 0.7);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+}
+
+.your-placement-badge {
+  background: white;
+  color: black;
+  font-weight: 600;
+  font-size: 0.75rem;
+  padding: 6px 16px;
+  border-radius: 0px 0px 150px 150px;
+  display: inline-block;
+  position: sticky;
+  top: 2.4rem;
+  z-index: 9;
+  text-align: center;
+  width: fit-content;
+  left: 0;
+  right: 0;
+  align-self: center;
+  margin-bottom: 10px;
+}
+
+.leaders-list-scroll {
+  height: calc(400px - 5rem);
+  overflow-y: auto;
+  padding: 0.5rem 1rem;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+}
+
+.leaders-list-scroll::-webkit-scrollbar {
+  width: 1px;
+}
+
+.leaders-list-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.leaders-list-scroll::-webkit-scrollbar-thumb {
+  background: #b51eff;
+  border-radius: 999px;
+  width: 1px;
+}
+
+.leaders-list-scroll {
+  scrollbar-width: 0.1rem;
+  scrollbar-color: #b51eff transparent;
+  border-radius: 10px;
+}
+
+
 @media (max-width: 1200px) {
   div.avatar-container {
     max-width: 450px;
@@ -812,12 +1147,12 @@ form > div {
 
   .gift-main {
     scale: 0.93;
-    margin-top: -200px;
+    margin-top: -60px;
   }
 
   .task-main {
     scale: 0.93;
-    margin-top: -170px;
+    margin-top: -40px;
   }
 }
 
@@ -842,12 +1177,12 @@ form > div {
 
   .gift-main {
     scale: 0.9;
-    margin-top: -200px;
+    margin-top: -70px;
   }
 
   .task-main {
     scale: 0.9;
-    margin-top: -170px;
+    margin-top: -50px;
   }
 
 }
@@ -861,12 +1196,12 @@ form > div {
   }
 
   .gift-main {
-    margin-top: -200px;
+    margin-top: -100px;
     scale: 0.8;
   }
 
   .task-main {
-    margin-top: -180px;
+    margin-top: -80px;
     scale: 0.8;
   }
 }
@@ -874,12 +1209,12 @@ form > div {
 @media (max-width: 400px) {
   .gift-main {
     scale: 0.7;
-    margin-top: -190px;
+    margin-top: -120px;
   }
 
   .task-main {
     scale: 0.7;
-    margin-top: -140px;
+    margin-top: -90px;
   }
 }
 
