--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   background: radial-gradient(circle, rgba(255,255,255,0.6) 0%, black 35%, #0C0B0B 100%);
   background-repeat: no-repeat;
   padding-top: 50px;
+  min-height: 100vh;
 }
 
 body.other-page {
