--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,13 @@ div.time-container {
 }
 
 div.time-container > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 46px;
+  height: 24px;
   background-color: #282828;
   box-shadow: inset 0 0 3px rgba(0,0,0,0.61);
-  padding: 10px 13px;
   text-align: center;
   border-radius: 100px;
   font-size: 10px;
@@ -683,9 +687,9 @@ form > div {
 .task-main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: #000;
-  margin-top: -20px;
+  margin-top: 10px;
   width: 100%;
   max-height: 100vh;
   gap: 10px;
@@ -696,9 +700,9 @@ form > div {
 .gift-main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   background-color: #000;
-  margin-top: -50px;
+  margin-top: 10px;
   width: 100%;
   max-height: 100vh;
   gap: 10px;
@@ -973,8 +977,9 @@ form > div {
 .leaders-list-scroll {
   max-height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   padding: 0.5rem 1rem;
-  -webkit-overflow-scrolling: touch; /* плавный scroll на iOS */
+  -webkit-overflow-scrolling: touch;
   scroll-behavior: smooth;
 }
 
@@ -983,7 +988,7 @@ form > div {
   justify-content: space-evenly;
   align-items: center;
   gap: 50px;
-  width: 100%;
+  width: 80%;
   margin-top: 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -1208,7 +1213,6 @@ form > div {
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-left: 34px;
 }
 
 .link-container h1 {
@@ -1216,6 +1220,7 @@ form > div {
   font-size: 28px;
   font-weight: 700;
   align-self: flex-start;
+  padding-left: 34px;
 }
 
 .link-container h2 {
@@ -1225,6 +1230,7 @@ form > div {
   margin-left: 5px;
   margin-top: 13px;
   margin-bottom: 14px;
+  padding-left: 34px;
   align-self: flex-start;
 }
 
@@ -1486,21 +1492,63 @@ form > div {
   scrollbar-color: #b51eff transparent;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1200px) {
   div.avatar-container {
-    max-width: 300px;
-    height: 440px;
+    max-width: 500px;
+    height: 600px;
     aspect-ratio: 3 / 5;
     padding: 0;
   }
 
   .gift-main {
-    margin-top: -100px;
-    scale: 0.8;
+    margin-top: -150px;
+    scale: 0.9;
   }
 
   .task-main {
     margin-top: -80px;
+    scale: 0.9;
+  }
+}
+
+@media (max-width: 780px) {
+  div.avatar-container {
+    max-width: 400px;
+    height: 500px;
+    aspect-ratio: 3 / 5;
+    padding: 0;
+  }
+
+  .gift-main {
+    margin-top: -130px;
+    scale: 0.9;
+  }
+
+  .task-main {
+    margin-top: -90px;
+    scale: 0.9;
+  }
+
+  .active-tab, .non-active-tab {
+    height: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  div.avatar-container {
+    max-width: 350px;
+    height: 510px;
+    aspect-ratio: 3 / 5;
+    padding: 0;
+  }
+
+  .gift-main {
+    margin-top: -240px;
+    scale: 0.8;
+  }
+
+  .task-main {
+    margin-top: -200px;
     scale: 0.8;
   }
 
@@ -1512,12 +1560,12 @@ form > div {
 @media (max-width: 400px) {
   .gift-main {
     scale: 0.7;
-    margin-top: -120px;
+    margin-top: -240px;
   }
 
   .task-main {
     scale: 0.7;
-    margin-top: -90px;
+    margin-top: -200px;
   }
 
 }
