--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   font-family: Benzin;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   width: 100vw;
   background-color: #0C0B0B;
@@ -16,11 +16,14 @@ body {
   background-repeat: no-repeat;
   padding-top: 50px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 body.other-page {
   background: none;
   background-color: #000;
+  display: block;
+  overflow: scroll;
 }
 
 header {
@@ -31,6 +34,10 @@ header {
   left: 0;
   right: 0;
   top: 0;
+  background-color: #000;
+}
+
+div.header-container {
   padding: 11px 22px;
   display: flex;
   align-items: center;
@@ -46,7 +53,7 @@ div.time-container {
   gap: 5px;
 }
 
-div.time-container > div {
+.div-day {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,6 +65,8 @@ div.time-container > div {
   border-radius: 100px;
   font-size: 10px;
   font-weight: 500;
+  padding: 0;
+  margin: 0;
 }
 
 div.time-container > p {
@@ -141,9 +150,12 @@ div.theme-container > p {
   font-weight: 400;
 }
 
-div.home-main {
-  height: 80%;
-  padding-top: 70px;
+.home-main {
+  margin-top: 56px;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 div.progress-bar-container {
@@ -158,6 +170,7 @@ div.progress-bar-container {
 
 div.lvl {
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     margin-bottom: 10px;
@@ -166,7 +179,7 @@ div.lvl {
 }
 
 div.lvl > span {
-  width: 32px;
+  width: 40px;
 }
 
 div.progress-bar {
@@ -269,14 +282,26 @@ div.exchange img {
 }
 
 div.avatar-container {
-  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 40px;
+  
   z-index: 1;
   width: 100%;
   max-width: 250px;
   height: 500px;
   aspect-ratio: 3 / 5;
+
   padding: 10px;
   box-sizing: border-box;
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-drag: none;
 }
 
 div.avatar-container img {
@@ -284,6 +309,11 @@ div.avatar-container img {
   height: 100%;
   object-fit: contain;
   transition: transform 0.3s ease;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-drag: none;
 }
 
 div.avatar-container img:active {
@@ -678,42 +708,40 @@ form > div {
 }
 
 .task-title {
-  margin-top: -40px;
-  margin-left: 40px;
+  padding-top: 27px;
+  padding-bottom: 16px;
   font-size: 15px;
   font-weight: 700;
+  text-align: center;
+}
+
+.task-title h1 {
+  margin: 0;
 }
 
 .task-main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #000;
-  margin-top: 10px;
+  min-height: 133vh;
+  width: 100vw;
   width: 100%;
-  max-height: 100vh;
-  gap: 10px;
-  width: 400px;
-  height: 600px;
 }
 
 .gift-main {
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  background-color: #000;
-  margin-top: 10px;
+  justify-content: flex-start;
+  min-height: 133vh;
+  width: 100vw;
   width: 100%;
-  max-height: 100vh;
-  gap: 10px;
-  width: 400px;
-  height: 600px;
 }
 
 .tab-row {
   display: flex;
-  justify-content: center;
   align-items: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .active-tab {
@@ -742,7 +770,10 @@ form > div {
 .tabs {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  justify-content: center;
   gap: 20px;
+  margin-top: 29px;
 }
 
 .task-container {
@@ -753,6 +784,8 @@ form > div {
   align-items: center;
   height: 50px;
   width: 100%;
+  padding-left: 34px;
+  padding-right: 34px;
 }
 
 .pfphoto {
@@ -807,26 +840,32 @@ form > div {
 }
 
 .gift-title {
+margin: 0;
   font-size: 28px;
   font-weight: 700;
   width: 277px;
-  padding-left: 10px;
+  padding-left: 34px;
+  padding-top: 27px;
+  padding-bottom: 16px;
 }
 
 .stats-main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  min-height: 140vh;
+  min-height: 133vh;
+  width: 100vw;
+  width: 100%;
 }
 
 .stats-main h1 {
   font-size: 28px;
   font-weight: 700;
   align-self: self-start;
-  margin-left: 34px;
-  margin-bottom: 16px;
+  padding-left: 34px;
+  padding-bottom: 16px;
+  padding-top: 27px;
+  margin: 0;
 }
 
 .stats-main h2 {
@@ -835,7 +874,6 @@ form > div {
   margin: 0;
   margin-top: 7px;
   margin-bottom: 12px;
-  margin-left: 34px;
 }
 
 .dash-board {
@@ -933,7 +971,6 @@ form > div {
   justify-content: center;
   gap: 70px;
   align-items: center;
-  margin-left: 30px;
   margin-top: 10px;
   padding: 0.5rem, 1rem;
   position: sticky;
@@ -975,7 +1012,8 @@ form > div {
 }
 
 .leaders-list-scroll {
-  max-height: 100%;
+  width: 360px;
+  max-height: calc(100% - 220px);
   overflow-y: auto;
   overflow-x: hidden;
   padding: 0.5rem 1rem;
@@ -991,6 +1029,7 @@ form > div {
   width: 80%;
   margin-top: 15px;
   padding-bottom: 15px;
+  margin-left: -30px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   width: 350px;
   margin-right: -30px;
@@ -1023,6 +1062,7 @@ form > div {
   gap: 20px;
   justify-content: center;
   align-items: center;
+  width: 100%;;
 }
 
 .leaders-photo-container {
@@ -1071,7 +1111,7 @@ form > div {
 }
 
 .leaders-container {
-  height: 400px;
+  height: calc(100vh - 102px);
   border-radius: 12px;
   overflow: hidden;
   position: relative;
@@ -1083,8 +1123,10 @@ form > div {
   z-index: 100;
   font-size: 1.2rem;
   font-weight: bold;
-  padding: 1rem 1rem 0.5rem;
+  padding: 0;
+  margin: 0;
   color: white;
+  text-align: center;
 }
 
 .p-row-leaders {
@@ -1098,7 +1140,7 @@ form > div {
   position: sticky;
   top: 0;
   z-index: 10;
-  width: 100%;
+  width: 80%;
 }
 
 .your-placement-badge {
@@ -1121,7 +1163,11 @@ form > div {
 }
 
 .leaders-list-scroll {
-  height: calc(400px - 5rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   overflow-y: auto;
   padding: 0.5rem 1rem;
   -webkit-overflow-scrolling: touch;
@@ -1149,61 +1195,13 @@ form > div {
 }
 
 
-@media (max-width: 1200px) {
-  div.avatar-container {
-    max-width: 450px;
-    height: 480px;
-    aspect-ratio: 3/5;
-    padding: 5px;
-  }
-
-  .gift-main {
-    scale: 0.93;
-    margin-top: -60px;
-  }
-
-  .task-main {
-    scale: 0.93;
-    margin-top: -40px;
-  }
-}
-
-.avatar-container {
-  position: relative;
-  display: inline-block;
-  overflow: visible;
-}
-
-@media (max-width: 768px) {
-  div.avatar-container {
-    max-width: 300px;
-    height: 480px;
-    aspect-ratio: 3/5;
-    padding: 5px;
-  }
-
-  div.avatar-container img {
-    width: 100%;
-    height: 100%;
-  }
-
-  .gift-main {
-    scale: 0.9;
-    margin-top: -70px;
-  }
-
-  .task-main {
-    scale: 0.9;
-    margin-top: -50px;
-  }
-
-}
-
 .friends-main {
-  display: flex;
+ display: flex;
   flex-direction: column;
-  min-height: 130vh;
-  width: 400px;
+  justify-content: flex-start;
+  min-height: 133vh;
+  width: 100vw;
+  width: 100%;
 }
 
 .link-container {
@@ -1339,6 +1337,7 @@ form > div {
 }
 
 .friends-container {
+  height: calc(100vh-105px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1493,82 +1492,54 @@ form > div {
 }
 
 @media (max-width: 1200px) {
-  div.avatar-container {
-    max-width: 500px;
-    height: 600px;
-    aspect-ratio: 3 / 5;
-    padding: 0;
-  }
 
-  .gift-main {
-    margin-top: -150px;
-    scale: 0.9;
-  }
-
-  .task-main {
-    margin-top: -80px;
-    scale: 0.9;
+  .avatar-container {
+    margin-top: 90px;
   }
 }
 
 @media (max-width: 780px) {
-  div.avatar-container {
-    max-width: 400px;
-    height: 500px;
-    aspect-ratio: 3 / 5;
-    padding: 0;
+  .avatar-container {
+    justify-content: flex-end;
   }
 
-  .gift-main {
-    margin-top: -130px;
-    scale: 0.9;
-  }
-
-  .task-main {
-    margin-top: -90px;
-    scale: 0.9;
-  }
-
-  .active-tab, .non-active-tab {
+  .active-tab,
+  .non-active-tab {
     height: 40px;
+  }
+  
+  .avatar-container {
+    margin-top: 90px;
   }
 }
 
 @media (max-width: 480px) {
-  div.avatar-container {
-    max-width: 350px;
-    height: 510px;
-    aspect-ratio: 3 / 5;
-    padding: 0;
+  .avatar-container {
+    scale: 0.9;
   }
 
-  .gift-main {
-    margin-top: -170px;
-    scale: 0.8;
+  .task-title {
+    text-align: start;
+    padding-left: 34px;
   }
 
-  .task-main {
-    margin-top: -120px;
-    scale: 0.8;
+  .tab-row button {
+    width: 100%;
   }
 
-  .active-tab, .non-active-tab {
-    height: 40px;
+  .stats-main {
+    min-height: 125vh;
   }
 }
 
 @media (max-width: 400px) {
-  .gift-main {
-    scale: 0.7;
-    margin-top: -240px;
-  }
 
-  .task-main {
-    scale: 0.7;
-    margin-top: -200px;
+  .avatar-container {
+    margin-top: 90px;
   }
-
 }
+
+
 
 @media (hover: none) {
   .avatar-container {
