--- a/src/layouts/task-page-layout/tasks-page.css
+++ b/src/layouts/task-page-layout/tasks-page.css
@@ -19,7 +19,8 @@
 .task-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 60px;
   padding: 5px 10px;
   align-items: center;
   height: 50px;
@@ -49,6 +50,7 @@
 .task-name {
   font-size: 11px;
   font-weight: 400;
+  width: 175px;
 }
 
 .task-prize {
@@ -139,6 +141,11 @@
   .task-title {
     text-align: start;
     padding-left: 34px;
+  }
+  
+  .task-container {
+    justify-content: space-between;
+    gap: 0;
   }
 
 }
