--- a/src/layouts/stats-page-layout/stats-page.css
+++ b/src/layouts/stats-page-layout/stats-page.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   min-height: 133vh;
   width: 100vw;
   width: 100%;
@@ -10,7 +11,6 @@
 .stats-main h1 {
   font-size: 28px;
   font-weight: 700;
-  align-self: self-start;
   padding-left: 34px;
   padding-bottom: 16px;
   padding-top: 27px;
@@ -384,6 +384,10 @@
 }
 
 @media (max-width: 480px) {
+
+  .stats-main {
+    align-items: unset;
+  }
 
   .tab-row button {
     width: 100%;
