--- a/src/layouts/exchange-page-layout/exchange-page.css
+++ b/src/layouts/exchange-page-layout/exchange-page.css
@@ -103,6 +103,25 @@ form > div {
   align-items: center;
 }
 
+div.exchange {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: inset 0 0 3px rgba(0,0,0,0.61%);
+  width: 27px;
+  height: 27px;
+  color: black;
+  border-radius: 50%;
+}
+
+div.exchange img {
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+}
+
 .styled-input {
   text-align: center;
   width: 300px;
