--- a/src/layouts/home-page-layout/home-page.css
+++ b/src/layouts/home-page-layout/home-page.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow-y: auto;
+  scroll-behavior: smooth;
 }
 
 div.progress-bar-container {
@@ -123,8 +125,8 @@ div.exchange {
 }
 
 div.exchange img {
-  width: 50%;
-  height: 50%;
+  width: 38%;
+  height: 34%;
   object-fit: contain;
 }
 
@@ -140,11 +142,12 @@ div.avatar-container {
   aspect-ratio: 3 / 5;
   padding: 10px;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  -webkit-user-drag: none;
 }
 
 div.avatar-container img {
