--- a/src/layouts/friends-page-layout/friends-page.css
+++ b/src/layouts/friends-page-layout/friends-page.css
@@ -120,9 +120,10 @@
 }
 
 .tg-bonus p, .premium-bonus p{
-  width: 86px;
+  width: 100px;
   text-wrap: wrap;
   margin: 0;
+  font-size: 10px;
 }
 
 .i-bonus {
@@ -133,7 +134,7 @@
 }
 
 .i-bonus img {
-  width: 20px;
+  width: 2%;
   height: 20px;
 }
 
