--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 * {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   box-sizing: border-box;
 }
 
