--- a/src/layouts/gift-page-layout/gift-page.css
+++ b/src/layouts/gift-page-layout/gift-page.css
@@ -43,7 +43,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 60px;
+  gap: 30px;
   padding: 5px 10px;
   align-items: center;
   height: 50px;
@@ -116,7 +116,7 @@
   }
 
   .task-container {
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 0;
   }
 }
