Changing task container style

--- a/src/layouts/task-page-layout/tasks-page.css
+++ b/src/layouts/task-page-layout/tasks-page.css
@@ -158,6 +158,11 @@
 }
 
 @media (max-width: 780px) {
+  .task-title {
+    text-align: start;
+    padding-left: 34px;
+  }
+
   .active-tab,
   .non-active-tab {
     height: 40px;
